# hestia

./: README.md  docker-compose.yaml  package-lock.json  package.json
back/: Dockerfile  pyproject.toml
back/hestia/: __init__.py  routes.py
back/hestia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
back/hestia/handlers/: week_menu.py
front/: package-lock.json  package.json  vue.config.js
front/src/: App.vue  main.js
front/src/components/: Calendar.vue  Dashboard.vue  Recipes.vue  Tasks.vue
